# bluepill_mynewt_rust_blink

./: .devcontainer.json  .gitignore  Cargo.toml  Makefile  README.md  bindgen.help.txt
dev-container/: Dockerfile
mynewt/: README.md
mynewt/apps/blinky/src/: stub.c
mynewt/apps/firmware/: pkg.yml
mynewt/targets/firmware/: pkg.yml  target.yml
mynewt/targets/mcu_boot/: pkg.yml
openocd/: bitbang-swd.ocd  close-telnet.txt  debug.ocd  flash-app.ocd  flash-boot.ocd  flash-init.ocd  st-link.ocd
renode/: bluepill_app.resc
rust/app/: Cargo.toml  build.rs  wrapper.h
rust/app/src/: lib.rs
