[package]
name = "rust_mynewt_stm32_firmware"
version = "0.1.0"
authors = ["Tino Adams <tino.a77@gmail.com>"]
edition = "2018"

[lib]
name = "rust_blink_app"
path = "src/lib.rs"
test       = false
bench      = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = { version = "0.53.2"}

[dependencies]
cty = "0.2"  # C types library: https://crates.io/crates/cty
cstr_core = "0.2"  # String utilities from cstr_core library: https://crates.io/crates/cstr_core
memchr      = { version = "2.3", default-features = false } # String search. Reduce the ROM size by disabling default features. See https://github.com/BurntSushi/rust-memchr
cortex-m = "0.6.2" # https://crates.io/crates/cortex-m
